k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bhukkad
  labels:
    app: bhukkad
    env: production
